 * MDCertificateFile and MDCertificateKeyFile can now be specified several
   times to add multiple, static certificates to a MDomain.
 * pytest runs also from the top level directory.

v2.4.0
----------------------------------------------------------------------------------------------------
 * MDPrivateKeys allows the specification of several types. Beside "RSA" plus optional
   key lengths elliptic curves can be configured. This means you can have multiple
   certificates for a Managed Domain with different key types.
   With ```MDPrivateKeys secp384r1 rsa2048``` you get one ECDSA  and one RSA certificate
   and all modern client will use the shorter ECDSA, while older client will
   get the RSA certificate.
   Many thanks to @tlhackque who pushed and helped on this.
 * Support added for MDomains consisting of a wildcard. Configuring ```MDomain *.host.net```
   will match all virtual hosts matching that pattern and obtain one certificate for it
   (assuming you have 'dns-01' challenge support configured). Addresses #239.
 * Removed support for ACMEv1 servers. The only known installation used to be Let's Encrypt
   which has disabled that version more than a year ago for new accounts.
 * Andreas Ulm (<https://github.com/root360-AndreasUlm>) implemented the ```renewing``` call
   to ```MDMessageCmd``` that can deny a certificate renewal attempt. This is useful in clustered
   installations, as discussed in #233).
 * new event ```challenge-setup:<type>:<domain>```, triggered when the challenge data
   for a domain has been created. This is invoked before the ACME server is told to
   check for it. The type is one of the ACME challenge types. This is invoked for
   every DNS name in a MDomain.
 * The max delay for retries has been raised to daily (this is like all retries jittered
   somewhat to avoid repeats at fixed time of day).
 * Certain error codes reported by the ACME server that indicate a problem with the